fixed flickering of h1

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -84,6 +84,9 @@ body {
   font-size: 1.5rem;
   margin-top: 15px;
   color: var(--text-primary);
+  min-height: 4rem;
+  display: block;
+  overflow: hidden;
 }
 
 /* stars in bg */
